--- a/pages/accueil.ejs
+++ b/pages/accueil.ejs
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page1</title>
+    <title>Accueil</title>
 </head>
 
 <body>
-    <h1>Page1</h1>
+    <a href="./accueil">Accueil</a>
+    <a href="./about">A propos</a>
+    <a href="./contact">Contact</a>
+    <h1>Accueil</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit saepe est voluptatibus explicabo amet dolorem
         similique voluptates maxime ipsa modi quo eaque praesentium earum odit quia, voluptate exercitationem minus
         illum!</p>
-    <a href="/page2">Page2</a>
 </body>
 
 </html>
