--- a/pages/about.ejs
+++ b/pages/about.ejs
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page2</title>
+    <title>A propos</title>
 </head>
 
 <body>
-    <h1>Page2</h1>
+    <a href="/accueil">Accueil</a>
+    <a href="/about">A propos</a>
+    <a href="/contact">Contact</a>
+    <h1>About</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid harum commodi autem voluptatibus, eum hic
         delectus facilis laborum vero dignissimos quibusdam quam aut fuga nisi nulla cumque tempora id perferendis!</p>
     <a href="/page3">Page3</a>
