--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h1>Page3</h1>
+    <a href="/accueil">Accueil</a>
+    <a href="/about">A propos</a>
+    <a href="/contact">Contact</a>
+    <h1>Contact</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta vitae ex vero architecto laboriosam veritatis rem
         obcaecati magni, quibusdam possimus exercitationem impedit accusamus autem voluptas officiis rerum, illum qui
         dolor.</p>
