--- a/pages/accueil.ejs
+++ b/pages/accueil.ejs
@@ -14,7 +14,8 @@
     <a href="./contact">Contact</a>
     <h1>Accueil</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit saepe est voluptatibus explicabo amet dolorem
-        similique voluptates maxime ipsa modi quo eaque praesentium earum odit quia, voluptate exercitationem minus
+        similique voluptates ggftrgmaxime ipsa modi quo eaque praesentium earum odit quia, voluptate exercitationem
+        minus
         illum!</p>
 </body>
 
