--- a/pages/about.ejs
+++ b/pages/about.ejs
@@ -14,7 +14,8 @@
     <a href="/contact">Contact</a>
     <h1>About</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid harum commodi autem voluptatibus, eum hic
-        delectus facilis laborum vero dignissimos quibusdam quam aut fuga nisi nulla cumque tempora id perferendis!</p>
+        delectus facilis laborum fdvero dignissimos quibusdam quam aut fuga nisi nulla cumque tempora id perferendis!
+    </p>
 </body>
 
 </html>
