--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -14,7 +14,8 @@
     <a href="/contact">Contact</a>
     <h1>Contact</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta vitae ex vero architecto laboriosam veritatis rem
-        obcaecati magni, quibusdam possimus exercitationem impedit accusamus autem voluptas officiis rerum, illum qui
+        obcaecati magni, quibusdam possimdffsgus exercitationem impedit accusamus autem voluptas officiis rerum, illum
+        qui
         dolor.</p>
 </body>
 
